--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '16'
       - run: npm i
       - run: ls && pwd
-      - run: tar -cvf * build.tar.gz
+      - run: tar -cvf build.tar.gz *
       - run: ls
       - name: Artifactory 
         uses: jfrog/setup-jfrog-cli@v1
