--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Checkout code
       - uses: actions/checkout@v3
+      # Checkout and install prerequisites
       - name: Use Nodejs
         uses: actions/checkout@v3
         with:
           node-version: '16'
+      - name: Artifactory 
+        uses: jfrog/setup-jfrog-cli@v1
+      # Build 
       - run: npm i
       - run: ls && pwd
       - run: tar -cvf build.tar.gz *
-      - run: ls
-      - name: Artifactory 
-        uses: jfrog/setup-jfrog-cli@v1
+      - run: ls && pwd
       - run: jfrog --version
         
       
