--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           JF_URL: ${{ secrets.JF_URL }} 
           JF_TOKEN: ${{ secrets.JF_TOKEN }}
-      # Buildd
+      # Build
       - run: npm i
       - run: ls && pwd
       - run: tar -cvf build.tar.gz *
