--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - run: jfrog --version
       - run: jfrog config show
       - run: jfrog config use GA_JF
-      - run: jfrog rt upload --url=${{ secrets.JF_URL }} "build.tar.gz" ga/test
+      - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrerts.JF_PASS }} "build.tar.gz" ga/test
       
         
       
