--- a/.github/workflows/Sonar_scan.yml
+++ b/.github/workflows/Sonar_scan.yml
@@ -1,18 +1,27 @@
 name: SonarScan
 
 on:
+  workflow_dispatch:
   push:
   pull_request:
 
 jobs:
-  SonarScan
+  SonarScan:
     name: SonarScan
     runs-on: ubuntu-latest
     steps:
+      - name: Use Nodejs
+        uses: actions/checkout@v3
+        with:
+          node-version: '16'
       - uses: actions/checkout@v2
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONARQUBE_HOST_URL }}
   
