--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,16 @@ jobs:
       - run: ls && pwd
       - run: tar -cvf build.tar.gz *
       - run: ls && pwd
-      - run: jfrog --version
-      - run: jfrog config show
-      - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "build.tar.gz" ga/${{github.run_number}}/
-      #SonarScan
+      #SonarQube scan
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONARQUBE_HOST_URL }}
+      #Upload Artifacts
+      - run: jfrog --version
+      - run: jfrog config show
+      - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "build.tar.gz" ga/${{github.run_number}}/
 
       
         
