--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,11 +43,11 @@ jobs:
 #       - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "build.tar.gz" ga/${{github.run_number}}/
       - run: echo $GITHUB_ACTOR
       - name: Send notification
-        uses: google-github-actions/chat@main
-        with:
-          webhook-url: ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
-          message: |
-            Build triggered by $GITHUB_ACTOR on branch $GITHUB_REF
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{
+            "text": "Build triggered by '"$GITHUB_ACTOR"' on branch '"$GITHUB_REF"'"
+          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
 
       
         
