--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - workflows
 
+env:
+  BUILD_URL: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+  BUILD_TIMESTAMP: $(date -d "${{ github.event.head_commit.timestamp }}" +%Y-%m-%d\ %H:%M:%S)
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -46,7 +50,16 @@ jobs:
         run: |
           curl -X POST -H "Content-Type: application/json" \
           -d '{
-            "text": "Build triggered by '"$GITHUB_ACTOR"' on branch '"$GITHUB_REF"'"
+            "text": "
+            Build Triggered by: "'$GITHUB_ACTOR'"
+            Job URL: "'$BUILD_URL'"
+            Project Name: 
+            Job Name: "'$GITHUB_WORKFLOW'"
+            Build Number: "'${{github.run_number}}'"
+            Branch Name: "'$GITHUB_BASE_REF'"
+            Build Started at: "'${BUILD_TIMESTAMP'"
+            BUILD EVENT: "'$GITHUB_EVENT_NAME'"
+            "
           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
 
       
