--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,11 @@ on:
 env:
   BUILD_URL: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
   BUILD_TIMESTAMP: $(date -d "${{ github.event.head_commit.timestamp }}")
+  BINARY: ${{ secrets.JF_URL }}/$GITHUB_WORKFLOW/${{github.run_number}}/$GITHUB_WORKFLOW.tar.gz
+  START_TIME: $(date -d "${{ github.event.head_commit.timestamp }}" +%s)
+  END_TIME: $(date +%s)
+  ELAPSED_TIME: $(($END_TIME - $START_TIME))
+  END_TIME_ISO: $(date -d "@$END_TIME" +"%Y-%m-%d %H:%M:%S %Z")
 
 jobs:
   build:
@@ -33,24 +38,26 @@ jobs:
       # Buildd
       - run: npm i
       - run: ls && pwd
-      - run: tar -cvf build.tar.gz *
+      - run: tar -cvf $GITHUB_WORKFLOW.tar.gz *
       - run: ls && pwd
       #SonarQube scan
-#       - name: SonarQube Scan
-#         uses: sonarsource/sonarqube-scan-action@master
-#         env:
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#           SONAR_HOST_URL: ${{ secrets.SONARQUBE_HOST_URL }}
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONARQUBE_HOST_URL }}
       #Upload Artifactss
-#       - run: jfrog --version
-#       - run: jfrog config show
-#       - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "build.tar.gz" ga/${{github.run_number}}/
+      - run: jfrog --version
+      - run: jfrog config show
+      - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "build.tar.gz" $GITHUB_WORKFLOW/${{github.run_number}}/
       - run: echo $GITHUB_ACTOR
-      - name: Send notification
+      - name: Send sucess notification
+        if: success()
         run: |
           curl -X POST -H "Content-Type: application/json" \
           -d '{
           "text": "
+          ****BUILD SUCCESS****
           Build Triggered by: '$GITHUB_ACTOR'
           Job URL: '$BUILD_URL'
           Project Name: '$GITHUB_REPOSITORY'
@@ -58,6 +65,28 @@ jobs:
           Build Number: '${{github.run_number}}'
           Branch Name: '$GITHUB_REF'
           Build Started at: '${{ github.event.head_commit.timestamp }}'
+          BUILD EVENT: '$GITHUB_EVENT_NAME'
+          BUILD DURATION: '$ELAPSED_TIME'
+          BUILD END TIME: '$END_TIME_ISO'
+          BINARY URL: '$BINARY'
+          "
+          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+      - name: Send failure notification
+        if: failure()
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{
+          "text": "
+          ****BUILD FAILED****
+          Build Triggered by: '$GITHUB_ACTOR'
+          Job URL: '$BUILD_URL'
+          Project Name: '$GITHUB_REPOSITORY'
+          Job Name: '$GITHUB_WORKFLOW'
+          Build Number: '${{github.run_number}}'
+          Branch Name: '$GITHUB_REF'
+          Build Started at: '${{ github.event.head_commit.timestamp }}'
+          BUILD DURATION: '$ELAPSED_TIME'
+          BUILD END TIME: '$END_TIME_ISO'
           BUILD EVENT: '$GITHUB_EVENT_NAME'
           "
           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
