--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 ## Project Configuration
 #sonar.organization=[YOUR ORG HERE]
-sonar.projectKey=github_actions
+sonar.projectKey=BMI
 # If true, the quality gate is not checked. By default the build will break if the project does not pass the quality gate.
 # sonar.buildbreaker.skip=true
 # Encoding of the source files.
