--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,6 @@ jobs:
       - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "$GITHUB_WORKFLOW.tar.gz" $GITHUB_WORKFLOW/B${{github.run_number}}/
       - run: echo $GITHUB_ACTOR
       - name: Send sucess notification
-        if: success()
         run: |
           curl -X POST -H "Content-Type: application/json" \
           -d '{
@@ -72,25 +71,25 @@ jobs:
           "
           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
         
-      - name: Send failure notification
-        if: failure()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{
-          "text": "
-            ||| BUILD FAILED |||
-            Build Triggered by: '$GITHUB_ACTOR'
-            Job URL: '$BUILD_URL'
-            Project Name: '$GITHUB_REPOSITORY'
-            Job Name: '$GITHUB_WORKFLOW'
-            Build Number: '${{github.run_number}}'
-            Branch Name: '$GITHUB_REF'
-            Build Started at: '${{ github.event.head_commit.timestamp }}'
-            BUILD DURATION: '$ELAPSED_TIME'
-            BUILD END TIME: '$END_TIME_ISO'
-            BUILD EVENT: '$GITHUB_EVENT_NAME'
-          "
-          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+#       - name: Send failure notification
+#         if: failure()
+#         run: |
+#           curl -X POST -H "Content-Type: application/json" \
+#           -d '{
+#           "text": "
+#             ||| BUILD FAILED |||
+#             Build Triggered by: '$GITHUB_ACTOR'
+#             Job URL: '$BUILD_URL'
+#             Project Name: '$GITHUB_REPOSITORY'
+#             Job Name: '$GITHUB_WORKFLOW'
+#             Build Number: '${{github.run_number}}'
+#             Branch Name: '$GITHUB_REF'
+#             Build Started at: '${{ github.event.head_commit.timestamp }}'
+#             BUILD DURATION: '$ELAPSED_TIME'
+#             BUILD END TIME: '$END_TIME_ISO'
+#             BUILD EVENT: '$GITHUB_EVENT_NAME'
+#           "
+#           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
         
       
         
