--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 env:
   BUILD_URL: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
   BUILD_TIMESTAMP: $(date -d "${{ github.event.head_commit.timestamp }}")
-  BINARY: ${{ secrets.JF_URL }}/'$GITHUB_WORKFLOW'/B_'${{github.run_number}}'/'$GITHUB_WORKFLOW'.tar.gz
+  BINARY: "${{ secrets.JF_URL }}/'$GITHUB_WORKFLOW'/B_'${{github.run_number}}'/'$GITHUB_WORKFLOW'.tar.gz"
   START_TIME: $(date -d "${{ github.event.head_commit.timestamp }}" +%s)
   END_TIME: $(date +%s)
   ELAPSED_TIME: $(($END_TIME - $START_TIME))
@@ -57,7 +57,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" \
           -d '{
           "text": "
-          :grin: ***BUILD SUCCESS*** :grin:
+          \U+1F973 ***BUILD SUCCESS*** \U+1F973	
           Build Triggered by: '$GITHUB_ACTOR'
           Job URL: '$BUILD_URL'
           Project Name: '$GITHUB_REPOSITORY'
@@ -69,44 +69,24 @@ jobs:
           BINARY URL: '$BINARY'
           "
           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
-#         run: |
-#           curl -X POST -H "Content-Type: application/json" \
-#           -d '{
-#           "text": "
-#             ||| BUILD SUCCESS |||
-#             Build Triggered by: '$GITHUB_ACTOR'
-#             Job URL: '$BUILD_URL'
-#             Project Name: '$GITHUB_REPOSITORY'
-#             Job Name: '$GITHUB_WORKFLOW'
-#             Build Number: '${{github.run_number}}'
-#             Branch Name: '$GITHUB_REF'
-#             Build Started at: '${{ github.event.head_commit.timestamp }}'
-#             BUILD EVENT: '$GITHUB_EVENT_NAME'
-#             BUILD DURATION: '$ELAPSED_TIME'
-#             BUILD END TIME: '$END_TIME_ISO'
-#             BINARY URL: '$BINARY'
-#           "
-#           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
         
-#       - name: Send failure notification
-#         if: failure()
-#         run: |
-#           curl -X POST -H "Content-Type: application/json" \
-#           -d '{
-#           "text": "
-#             ||| BUILD FAILED |||
-#             Build Triggered by: '$GITHUB_ACTOR'
-#             Job URL: '$BUILD_URL'
-#             Project Name: '$GITHUB_REPOSITORY'
-#             Job Name: '$GITHUB_WORKFLOW'
-#             Build Number: '${{github.run_number}}'
-#             Branch Name: '$GITHUB_REF'
-#             Build Started at: '${{ github.event.head_commit.timestamp }}'
-#             BUILD DURATION: '$ELAPSED_TIME'
-#             BUILD END TIME: '$END_TIME_ISO'
-#             BUILD EVENT: '$GITHUB_EVENT_NAME'
-#           "
-#           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+      - name: Send failure notification
+        if: failure()
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{
+          "text": "
+            \U+1FAE3 ***BUILD FAILED*** \U+1FAE3
+            Build Triggered by: '$GITHUB_ACTOR'
+            Job URL: '$BUILD_URL'
+            Project Name: '$GITHUB_REPOSITORY'
+            Job Name: '$GITHUB_WORKFLOW'
+            Build Number: '${{github.run_number}}'
+            Branch Name: '$GITHUB_REF'
+            Build Started at: '${{ github.event.head_commit.timestamp }}'
+            BUILD EVENT: '$GITHUB_EVENT_NAME'
+          "
+          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
         
       
         
