--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           Branch Name: '$GITHUB_REF'
           Build Started at: '${{ github.event.head_commit.timestamp }}'
           BUILD EVENT: '$GITHUB_EVENT_NAME'
-          BINARY URL: '$BINARY'
+          BINARY URL: ${{ secrets.JF_URL }}/'$GITHUB_WORKFLOW'/B_${{github.run_number}}/'$GITHUB_WORKFLOW'.tar.gz
           "
           }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
         
