--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      #Send Notifications
+      - name: Use shared library
+        uses: my-org/my-repo/my-shared-lib@main
       # Buildd
       - run: npm i
       - run: ${{ job.status }}
@@ -52,44 +55,8 @@ jobs:
       - run: jfrog config show
       - run: jfrog rt upload --url=${{ secrets.JF_URL }} --user=admin --password=${{ secrets.JF_PASS }} "$GITHUB_WORKFLOW.tar.gz" $GITHUB_WORKFLOW/B_${{github.run_number}}/
       - run: echo $GITHUB_ACTOR
-      - name: Send sucess notification
-        if: success()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{
-          "text": "
-           ***BUILD SUCCESS***
-           BUILD ${{ job.status | uppercase }}	
-          Build Triggered by: '$GITHUB_ACTOR'
-          Job URL: '$BUILD_URL'
-          Project Name: '$GITHUB_REPOSITORY'
-          Job Name: '$GITHUB_WORKFLOW'
-          Build Number: '${{github.run_number}}'
-          Branch Name: '$GITHUB_REF'
-          Build Started at: '${{ github.event.head_commit.timestamp }}'
-          BUILD EVENT: '$GITHUB_EVENT_NAME'
-          BINARY URL: ${{ secrets.JF_URL }}/'$GITHUB_WORKFLOW'/B_${{github.run_number}}/'$GITHUB_WORKFLOW'.tar.gz
-          "
-          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
-        
-      - name: Send failure notification
-        if: failure()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{
-          "text": "
-            ***BUILD FAILED***
-            BUILD ${{ job.status | uppercase }}
-            Build Triggered by: '$GITHUB_ACTOR'
-            Job URL: '$BUILD_URL'
-            Project Name: '$GITHUB_REPOSITORY'
-            Job Name: '$GITHUB_WORKFLOW'
-            Build Number: '${{github.run_number}}'
-            Branch Name: '$GITHUB_REF'
-            Build Started at: '${{ github.event.head_commit.timestamp }}'
-            BUILD EVENT: '$GITHUB_EVENT_NAME'
-          "
-          }' ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+      - name: Use shared library
+        uses: my-org/my-repo/my-shared-lib@main
         
       
         
