--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Print GitHub event action
         run: echo "${{ github.event_name }}"
-      - name: Sleep for 10 seconds
+      - name: RUN ONLY IF PUSH
       # Sleep for 10 seconds if it's a push event
         if: github.event_name == 'push'
         run: |
@@ -21,7 +21,7 @@ jobs:
               echo "${{ github.event_name }}"
           
       # Sleep for 1 minute if it's a pull request event
-      - name: Sleep for 1 minute
+      - name: RUN ONLY IF PULL REQUEST
         if: github.event_name == 'pull_request'
         run: |
               sleep 60
